--- a/src/container/skills.hbs
+++ b/src/container/skills.hbs
@@ -14,7 +14,7 @@
                     {{name}}
 
                     {{#if point includeZero=true}} ({{point}}) {{/if}}
-                    {{#if istTop}} (top) {{/if}}
+                    {{#if istTop}} (Top) {{/if}}
 
                     {{#unless point includeZero=true}} (не вивчаємо){{/unless}}
                     {{#unless point}}
