--- a/src/container/education.hbs
+++ b/src/container/education.hbs
@@ -7,7 +7,7 @@
     {{#with main}}
     <main>
         <section>
-            {{> title data="My educations" big=true }}
+            {{> title data="My educationsі" big=true }}
             <ul>
                 {{#each educations}}
                 <li>
