--- a/src/container/task21.hbs
+++ b/src/container/task21.hbs
@@ -89,9 +89,9 @@
     {{#with paragraph}}
     <div class="card">
         <div class="card-body">
-            <p class="text-uppcase">{{title}}</title>
+            <p class="text-uppercase">{{title}}</title>
             </p>
-            <p class="text-lowcase">{{text}}</p>
+            <p class="text-lowercase">{{text}}</p>
             {{#with button}}
             <a href="{{url}}" class="btn btn-link">{{text}}</a>
             {{/with}}
