--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,56 +1,132 @@
 <main>
-    <h1 class="text-center text-uppercase">Hello world</h1>
-    <h2 class="text-end text-lowercase">Second</h2>
-    <h3 class="text-capitalize">3 title</h3>
+    <div class="row gy-3">
+        <section class="col-12">
+            <div class="card text-bg-dark">
+                <img src="https://picsum.photos/900/450" class="card-img-top" alt="Product photo">
+                <div class="card-body">
+                    <h5 class="card-title text-bg-primary">Product #1732</h5>
+                    <p class="text-bg-secondary">Геймпад для телефону Seuno W18 (GS74) </p>
+                    <a href="/summary" class="btn btn-primary">Open</a>
+                </div>
+            </div>
+        </section>
 
-    <hr>
+        <section class="col-3">
+            <div class="card text-bg-primary">
+                <div class="card-header">
+                    <div>Menu</div>
+                </div>
 
-    <div class="display-1 text-muted">Hello world</div>
-    <div class="display-5">Second</div>
-    <div class="display-6">3 title</div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        <a href="#" class="btn btn-link">Home page</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="#" class="btn btn-link">Summary page</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="#" class="btn btn-link">Skills page</a>
+                    </li>
+                </ul>
 
-    <hr>
+                <div class="card-footer">
+                    <button class="btn btn-dark btn-sm">Update list</button>
+                </div>
+            </div>
+        </section>
 
-    <div class="text-muted text-end">
-        Додатковий <span class="display-6">текст</span>
-    </div>
+        <section class="col-9">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>#if</th>
+                        <th>name</th>
+                        <th>age</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>1</th>
+                        <td>Jhon</td>
+                        <td>35</td>
+                    </tr>
+                    <tr>
+                        <th>2</th>
+                        <td>Dima</td>
+                        <td>27</td>
+                    </tr>
+                    <tr>
+                        <th>1</th>
+                        <td>Jhon</td>
+                        <td>35</td>
+                    </tr>
+                    <tr>
+                        <th>2</th>
+                        <td>Dima</td>
+                        <td>27</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
 
-    <div class="card">
-        <div class="card-body">
-            <button href="#" class="btn btn-primary">
-                Button primary
-            </button>
-        </div>
-    </div>
-
-    <br>
-    <br>
-
-    <div class="card">
-        <div class="card-body">
-            <div>My text</div>
-            <div class="text-dark">My text</div>
-            <div class="text-muted">My text</div>
-        </div>
-    </div>
-
-    <br>
-    <br>
-
-    <div class="card">
-        <div class="card-body">
-            <button class="btn btn-secondary btn-lg">Додати</button>
-            <button class="btn btn-outline-secondary">Редагувати</button>
-            <button class="btn btn-outline-dark btn-sm">Видалити</button>
-        </div>
-    </div>
-
-    <br>
-    <br>
-
-    <div class="card">
-        <div class="card-body">
-            This is content
-        </div>
+        <section class="col-12">
+            <div class="row g-2">
+                <div class="col-3">
+                    <div class="card text-bg-success">
+                        <div class="card-header text-center">Header</div>
+                        <div class="card-body text-center">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class="btn btn-light">Click!</button>
+                        </div>
+                        <div class="card-footer text-center">Footer</div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card text-bg-success">
+                        <div class="card-header text-center">Header</div>
+                        <div class="card-body text-center">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class="btn btn-light">Click!</button>
+                        </div>
+                        <div class="card-footer text-center">Footer</div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card text-bg-success">
+                        <div class="card-header text-center">Header</div>
+                        <div class="card-body text-center">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class="btn btn-light">Click!</button>
+                        </div>
+                        <div class="card-footer text-center">Footer</div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card text-bg-success">
+                        <div class="card-header text-center">Header</div>
+                        <div class="card-body text-center">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class="btn btn-light">Click!</button>
+                        </div>
+                        <div class="card-footer text-center">Footer</div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card text-bg-success">
+                        <div class="card-header text-center">Header</div>
+                        <div class="card-body text-center">
+                            <h6 class="card-title">This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class="btn btn-light">Click!</button>
+                        </div>
+                        <div class="card-footer text-center">Footer</div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 </main>
