--- a/src/container/task31.hbs
+++ b/src/container/task31.hbs
@@ -1,4 +1,4 @@
-<main>
+<main class="p-5">
     <div class="row g-4"></div>
     {{#with navigation}}
     <section class="col-12">
@@ -177,11 +177,11 @@
         </div>
     </section>
     {{/with}}
+    <hr class="mt-5">
 </main>
-<br>
-<hr>
+
 {{#with footer}}
-<footer>
+<footer class="px-5">
     <h5>{{title}}</h5>
     <br>
     <div class="row gx-5 gy-2">
