--- a/src/component/footer.hbs
+++ b/src/component/footer.hbs
@@ -1,4 +1,5 @@
 <footer>
+    <hr class="my-4">
     <div>
         {{#with social}}
         {{> link blank=true text=email.text href=email.href}}
@@ -6,11 +7,9 @@
         {{> link blank=true text=linkedin.text href=linkedin.href}}
         {{/with}}
     </div>
-    <br>
-    <div>
+    <div class="my-3">
         <em>Copyright {{firstname}} {{lastname}}</em>
     </div>
-    <br>
     <div>
         <address>{{address}}</address>
     </div>
