--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,132 +1,73 @@
-<main>
-    <div class="row gy-3">
-        <section class="col-12">
-            <div class="card text-bg-dark">
-                <img src="https://picsum.photos/900/450" class="card-img-top" alt="Product photo">
-                <div class="card-body">
-                    <h5 class="card-title text-bg-primary">Product #1732</h5>
-                    <p class="text-bg-secondary">Геймпад для телефону Seuno W18 (GS74) </p>
-                    <a href="/summary" class="btn btn-primary">Open</a>
+<main class="p-5">
+    <div class="row g-4">
+        <div class="col-12">
+            <div class="nav nav-tabs">
+                <div class="nav-item">
+                    <a href="#" class="nav-link active">Main</a>
+                </div>
+                <br>
+
+                <div class="nav-item">
+                    <a href="#" class="nav-link">Bootstrap</a>
+                </div>
+                <br>
+
+                <div class="nav-item">
+                    <a href="#" class="nav-link disabled">Shop list</a>
                 </div>
             </div>
-        </section>
+        </div>
 
-        <section class="col-3">
-            <div class="card text-bg-primary">
-                <div class="card-header">
-                    <div>Menu</div>
-                </div>
-
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
-                        <a href="#" class="btn btn-link">Home page</a>
-                    </li>
-                    <li class="list-group-item">
-                        <a href="#" class="btn btn-link">Summary page</a>
-                    </li>
-                    <li class="list-group-item">
-                        <a href="#" class="btn btn-link">Skills page</a>
-                    </li>
-                </ul>
-
-                <div class="card-footer">
-                    <button class="btn btn-dark btn-sm">Update list</button>
-                </div>
-            </div>
-        </section>
-
-        <section class="col-9">
-            <table class="table table-bordered">
-                <thead>
-                    <tr>
-                        <th>#if</th>
-                        <th>name</th>
-                        <th>age</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th>1</th>
-                        <td>Jhon</td>
-                        <td>35</td>
-                    </tr>
-                    <tr>
-                        <th>2</th>
-                        <td>Dima</td>
-                        <td>27</td>
-                    </tr>
-                    <tr>
-                        <th>1</th>
-                        <td>Jhon</td>
-                        <td>35</td>
-                    </tr>
-                    <tr>
-                        <th>2</th>
-                        <td>Dima</td>
-                        <td>27</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-
-        <section class="col-12">
-            <div class="row g-2">
-                <div class="col-3">
-                    <div class="card text-bg-success">
-                        <div class="card-header text-center">Header</div>
-                        <div class="card-body text-center">
-                            <h6 class="card-title">This is title</h6>
-                            <p>This is content of our box</p>
-                            <button class="btn btn-light">Click!</button>
+        <div class="col-4">
+            <div class="card">
+                <div class="pt-3 pb-2 px-4">
+                    <div class="nav flex-column">
+                        <div class="nav-item mb-2">
+                            <div class="card">
+                                <a href="#" class="nav-link">Home</a>
+                            </div>
                         </div>
-                        <div class="card-footer text-center">Footer</div>
-                    </div>
-                </div>
-                <div class="col-3">
-                    <div class="card text-bg-success">
-                        <div class="card-header text-center">Header</div>
-                        <div class="card-body text-center">
-                            <h6 class="card-title">This is title</h6>
-                            <p>This is content of our box</p>
-                            <button class="btn btn-light">Click!</button>
+                        <div class="nav-item mb-2">
+                            <div class="card">
+                                <a href="#" class="nav-link">Catalog</a>
+                            </div>
                         </div>
-                        <div class="card-footer text-center">Footer</div>
-                    </div>
-                </div>
-                <div class="col-3">
-                    <div class="card text-bg-success">
-                        <div class="card-header text-center">Header</div>
-                        <div class="card-body text-center">
-                            <h6 class="card-title">This is title</h6>
-                            <p>This is content of our box</p>
-                            <button class="btn btn-light">Click!</button>
+                        <div class="nav-item mb-2">
+                            <div class="card">
+                                <a href="#" class="nav-link disabled">FAQ</a>
+                            </div>
                         </div>
-                        <div class="card-footer text-center">Footer</div>
-                    </div>
-                </div>
-                <div class="col-3">
-                    <div class="card text-bg-success">
-                        <div class="card-header text-center">Header</div>
-                        <div class="card-body text-center">
-                            <h6 class="card-title">This is title</h6>
-                            <p>This is content of our box</p>
-                            <button class="btn btn-light">Click!</button>
-                        </div>
-                        <div class="card-footer text-center">Footer</div>
-                    </div>
-                </div>
-                <div class="col-3">
-                    <div class="card text-bg-success">
-                        <div class="card-header text-center">Header</div>
-                        <div class="card-body text-center">
-                            <h6 class="card-title">This is title</h6>
-                            <p>This is content of our box</p>
-                            <button class="btn btn-light">Click!</button>
-                        </div>
-                        <div class="card-footer text-center">Footer</div>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
+
+        <div class="col-8">
+            <div class="row">
+                <div class="clo-12">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item ">
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a href="#">PC or Notebooks</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            MacBook
+                        </li>
+                    </ol>
+                </div>
+            </div>
+
+            <div class="col-12">
+                <button class="btn btn-primary rounded-pill mb-3">Button</button>
+                <div class="alert alert-light">
+                    <h6 class="m-0">
+                        Hello world! <span class="badge text-bg-warning rounded-pill text-uppercase">Топ продаж</span>
+                    </h6>
+
+                </div>
+            </div>
+        </div>
     </div>
 </main>
