--- a/src/container/js.hbs
+++ b/src/container/js.hbs
@@ -3,7 +3,7 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
 --}}
 
-<div>
+<div class="p-5">
     <section>
         {{> title data=name big=true}}
         <div>Description: <span class="badge text-bg-light"><q>{{description}}</q></span></div>
