--- a/src/container/program.hbs
+++ b/src/container/program.hbs
@@ -3,7 +3,7 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
 --}}
 
-<div>
+<div class="p-5">
     {{#with program.excursion}}
     <section>
         {{> title data=name big=true}}
