--- a/src/container/shophome.hbs
+++ b/src/container/shophome.hbs
@@ -1,24 +1,5 @@
 <main class="p-5">
-    <section>
-        {{#with navigation}}
-        <div class="card">
-            <div class="row py-3 px-2">
-                <div class="col-8 ">
-                    <h2>{{Logo}}</h2>
-                </div>
-                <div class="col-4">
-                    <div class="nav">
-                        {{#each links}}
-                        <div class="nav-item">
-                            <a href="{{href}}" class="nav-link{{#if @last}} disabled {{/if}} ">{{text}}</a>
-                        </div>
-                        {{/each}}
-                    </div>
-                </div>
-            </div>
-        </div>
-        {{/with}}
-    </section>
+    {{> shopheader}}
 
     <section class=" mt-5">
         {{#with newsBlock}}
@@ -64,21 +45,7 @@
         <div class="row gy-4 gx-2 mt-5">
             {{#each cards}}
             <div class="col-4">
-                <div class="card">
-                    <img class="card-img-top" src="{{image}}">
-                    <div class="card-body">
-                        <div class="card-title">
-                            <h5>{{title}}</h5>
-                            {{#if isHot}}
-                            <span class="badge text-bg-warning rounded-pill text-uppercase text-light">Hot!</span>
-                            {{/if}}
-                            {{#if isNew}}
-                            <span class="badge text-bg-primary rounded-pill">New</span>
-                            {{/if}}
-                        </div>
-                        <p>{{description}}</p>
-                    </div>
-                </div>
+                {{> shopcard}}
             </div>
             {{/each}}
         </div>
@@ -107,35 +74,9 @@
 
     <hr class="my-5">
 
-    <section>
-        {{#with service}}
-        <div class="card text-bg-success text-center">
-            <div class="card-body">
-                <div class="card-title">
-                    <h2>{{title}}</h2>
-                </div>
-                <p>{{description}}</p>
-                {{#each buttons}}
-                <a class="btn btn-primary" href="{{link}}">{{text}}</a>
-                {{/each}}
-            </div>
-        </div>
-        {{/with}}
-    </section>
+    {{> shopaction}}
 
     <hr class="mt-5 mb-2">
 
-    <section>
-        <div class="row">
-            {{#each footer}}
-            <div class="nav col-2">
-                {{#each this}}
-                <div class="nav-item">
-                    <a class="nav-link{{#if @last}} disabled {{/if}}" href="{{link}}">{{text}}</a>
-                </div>
-                {{/each}}
-            </div>
-            {{/each}}
-        </div>
-    </section>
+    {{> shopfooter}}
 </main>
