--- a/src/container/shophome.hbs
+++ b/src/container/shophome.hbs
@@ -6,22 +6,7 @@
         <h2 class="text-center mb-4">{{title}}</h2>
         <div class="row gy-4 gx-2">
             {{#each cards}}
-            <div class="col-3">
-                <div class="card text-bg-dark">
-                    <div class="card-header">
-                        {{title}}
-                        {{#if isNew}}
-                        <span class="badge text-bg-success rounded-pill">New</span>
-                        {{/if}}
-                        {{#if isTop}}
-                        <span class="badge text-bg-danger rounded-pill">Top</span>
-                        {{/if}}
-                    </div>
-                    <div class="card-body">
-                        {{description}}
-                    </div>
-                </div>
-            </div>
+            {{> shoppost}}
             {{/each}}
         </div>
         {{/with}}
