--- a/src/container/shopproduct.hbs
+++ b/src/container/shopproduct.hbs
@@ -1,17 +1,7 @@
 <main class="p-5">
     {{> shopheader}}
 
-    <section>
-        <div class="mx-3 my-4">
-            <ol class="breadcrumb">
-                {{#each breadcrumb}}
-                <li class="breadcrumb-item ">
-                    <a{{#unless @last}} href="{{url}}" {{/unless}}>{{name}}</a>
-                </li>
-                {{/each}}
-            </ol>
-        </div>
-    </section>
+    {{> breadcrumb}}
 
     <section>
         {{#with productData}}
