--- a/src/component/shopheader.hbs
+++ b/src/component/shopheader.hbs
@@ -2,10 +2,10 @@
     {{#with navigation}}
     <div class="card">
         <div class="row py-3 px-2">
-            <div class="col-8 ">
+            <div class="col-7 ">
                 <h2>{{Logo}}</h2>
             </div>
-            <div class="col-4">
+            <div class="col-5 ps-4">
                 <div class="nav">
                     {{#each links}}
                     <div class="nav-item">
