--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,72 +1,44 @@
 <main class="p-5">
-    <div class="row g-4">
+    <div class="row g-5">
         <div class="col-12">
-            <div class="nav nav-tabs">
-                <div class="nav-item">
-                    <a href="#" class="nav-link active">Main</a>
-                </div>
-                <br>
-
-                <div class="nav-item">
-                    <a href="#" class="nav-link">Bootstrap</a>
-                </div>
-                <br>
-
-                <div class="nav-item">
-                    <a href="#" class="nav-link disabled">Shop list</a>
-                </div>
-            </div>
+            <label class="form-label">Email address</label>
+            <input class="form-control form-control-lg">
+            <div class="form-text text-danger">Error</div>
+        </div>
+        <div class="col-12">
+            <label class="form-label">Email address</label>
+            <input class="form-control form-control-sm">
+            <div class="form-text text-danger">Error</div>
         </div>
 
-        <div class="col-4">
-            <div class="card">
-                <div class="pt-3 pb-2 px-4">
-                    <div class="nav flex-column">
-                        <div class="nav-item mb-2">
-                            <div class="card">
-                                <a href="#" class="nav-link">Home</a>
-                            </div>
-                        </div>
-                        <div class="nav-item mb-2">
-                            <div class="card">
-                                <a href="#" class="nav-link">Catalog</a>
-                            </div>
-                        </div>
-                        <div class="nav-item mb-2">
-                            <div class="card">
-                                <a href="#" class="nav-link disabled">FAQ</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div>
+            <hr>
         </div>
 
-        <div class="col-8">
-            <div class="row">
-                <div class="clo-12">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item ">
-                            <a href="#">Home</a>
-                        </li>
-                        <li class="breadcrumb-item">
-                            <a href="#">PC or Notebooks</a>
-                        </li>
-                        <li class="breadcrumb-item">
-                            MacBook
-                        </li>
-                    </ol>
-                </div>
+        <div class="col-12">
+            <label class="form-label">Select role</label>
+            <select class="form-select form-select-lg">
+                <option selected>Open list</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+            </select>
+            <div class="form-text text-danger">Error</div>
+        </div>
+
+        <div>
+            <hr>
+        </div>
+
+        <div class="col-12">
+            <label class="form-label">Select food</label>
+            <div class="form-check form-switch">
+                <label class="form-check-label">Appla</label>
+                <input type="checkbox" class="form-check-input">
             </div>
-
-            <div class="col-12">
-                <button class="btn btn-primary rounded-pill mb-3">Button</button>
-                <div class="alert alert-light">
-                    <h6 class="m-0">
-                        Hello world! <span class="badge text-bg-warning rounded-pill text-uppercase">Топ продаж</span>
-                    </h6>
-
-                </div>
+            <div class="form-check">
+                <label class="form-check-label">Orange</label>
+                <input type="checkbox" class="form-check-input">
             </div>
         </div>
     </div>
