--- a/src/component/shopheader.hbs
+++ b/src/component/shopheader.hbs
@@ -2,9 +2,11 @@
     {{#with navigation}}
     <div class="card">
         <div class="row py-3 px-2">
+            {{#if Logo}}
             <div class="col-7 ">
                 <h2>{{Logo}}</h2>
             </div>
+            {{/if}}
             <div class="col-5 ps-4">
                 <div class="nav">
                     {{#each links}}
