--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,45 +1,15 @@
 <main class="p-5">
-    <div class="row g-5">
-        <div class="col-12">
-            <label class="form-label">Email address</label>
-            <input class="form-control form-control-lg">
-            <div class="form-text text-danger">Error</div>
-        </div>
-        <div class="col-12">
-            <label class="form-label">Email address</label>
-            <input class="form-control form-control-sm">
-            <div class="form-text text-danger">Error</div>
-        </div>
+    <h1>
+        <i class="bi bi-basket2"></i>
+    </h1>
 
-        <div>
-            <hr>
-        </div>
+    <button class="btn btn-info">
+        <i class="bi bi-sd-card-fill"></i>
+    </button>
 
-        <div class="col-12">
-            <label class="form-label">Select role</label>
-            <select class="form-select form-select-lg">
-                <option selected>Open list</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-            </select>
-            <div class="form-text text-danger">Error</div>
-        </div>
+    <br>
 
-        <div>
-            <hr>
-        </div>
-
-        <div class="col-12">
-            <label class="form-label">Select food</label>
-            <div class="form-check form-switch">
-                <label class="form-check-label">Appla</label>
-                <input type="checkbox" class="form-check-input">
-            </div>
-            <div class="form-check">
-                <label class="form-check-label">Orange</label>
-                <input type="checkbox" class="form-check-input">
-            </div>
-        </div>
+    <div>
+        <img width="100px" src="/svg/linkedin.svg" alt="linkedin">
     </div>
 </main>
