--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -2,11 +2,48 @@
 Це код container файлу для index сторінки,
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
 --}}
-<div class="p-5">
-    <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
+<main class="p-5">
+    <div class="row border border-light py-3 px-2">
+        <div class="col-6">
+            <h5>Тарас Демчишин</h5>
+        </div>
+        <div class="col-6 text-end">
+            <h5>Resume project</h5>
+        </div>
+    </div>
 
-    <button type="button" class="btn btn-primary">Купити</button>
-</div>
+    <div class="my-5">
+        <h4>Список сторінок</h4>
+        <p>Усі сторінки у цьому проекті </p>
+    </div>
+
+    <div>
+        <div><a href="/bio" class="mt-3 btn btn-primary">Bio</a></div>
+        <div><a href="/car" class="mt-3 btn btn-primary">Car</a></div>
+        <div><a href="/education" class="mt-3 btn btn-primary">Education</a></div>
+        <div><a href="/facebook" class="mt-3 btn btn-primary">facebook</a></div>
+        <div><a href="/js" class="mt-3 btn btn-primary">Js</a></div>
+        <div><a href="/mac" class="mt-3 btn btn-primary">Mac</a></div>
+        <div><a href="/person" class="mt-3 btn btn-primary">Person</a></div>
+        <div><a href="/program" class="mt-3 btn btn-primary">Program</a></div>
+        <div><a href="/shopcart" class="mt-3 btn btn-primary">Shopcart</a></div>
+        <div><a href="/shopcatalog" class="mt-3 btn btn-primary">Shopcatalog</a></div>
+        <div><a href="/shophome" class="mt-3 btn btn-primary">Shophome</a></div>
+        <div><a href="/shopnews" class="mt-3 btn btn-primary">Shopnews</a></div>
+        <div><a href="/shoporder" class="mt-3 btn btn-primary">Shoporder</a></div>
+        <div><a href="/shopproduct" class="mt-3 btn btn-primary">Shopproduct</a></div>
+        <div><a href="/shopprofile" class="mt-3 btn btn-primary">Shopprofile</a></div>
+        <div><a href="/shopreview" class="mt-3 btn btn-primary">Shopreview</a></div>
+        <div><a href="/skills" class="mt-3 btn btn-primary">Skills</a></div>
+        <div><a href="/summary" class="mt-3 btn btn-primary">Summary</a></div>
+        <div><a href="/task21" class="mt-3 btn btn-primary">Tast21</a></div>
+        <div><a href="/task22" class="mt-3 btn btn-primary">Task22</a></div>
+        <div><a href="/task31" class="mt-3 btn btn-primary">Task31</a></div>
+        <div><a href="/web" class="mt-3 btn btn-primary">Web</a></div>
+        <div><a href="/work" class="mt-3 btn btn-primary">Work</a></div>
+    </div>
+</main>
+
 {{!--
 Цей код містить лише те, що буде виводитись в
 
