--- a/src/container/work.hbs
+++ b/src/container/work.hbs
@@ -14,9 +14,7 @@
                     <li>
                         <div>{{position}}</div>
 
-                        <br>
-
-                        <div>
+                        <div class="mt-2">
                             {{duration.from}} -
                             {{#if duration.to}}
                             {{duration.to}}
@@ -25,9 +23,7 @@
                             {{/if}}
                         </div>
 
-                        <br>
-
-                        <div>
+                        <div class="mt-2">
                             {{#if company.url}}
                             {{> link text=company.name href=company.url blank=true noLine=true}}
                             {{else}}
@@ -35,52 +31,47 @@
                             {{/if}}
                         </div>
 
-                        <br>
+                        <div class="mt-3 card">
+                            <div class="card-header">
+                                <strong>Projects ({{projectAmount}})</strong>
+                            </div>
 
-                        <div>
-                            <strong>Projects ({{projectAmount}})</strong>
+                            <div class="card-body">
+
+                                <ul>
+                                    {{#each projects}}
+                                    <li>
+                                        <div>{{> link text=name href=url blank=true noLine=true}}</div>
+
+                                        <div class="mt-2">
+                                            <p>{{about}}</p>
+                                        </div>
+
+                                        <div class="mt-2"><em>Project stacks ({{stackAmount}})</em></div>
+
+                                        <div class="mt-2">
+                                            <ul>
+                                                {{#each stacks}}
+                                                <li>{{name}}</li>
+                                                {{/each}}
+                                            </ul>
+                                        </div>
+
+                                        <div class="mt-2 card"><em>Project awards ({{awardsAmount}})</em></div>
+
+                                        <div class="mt-2">
+                                            <ul>
+                                                {{#each awards}}
+                                                <li>{{name}}</li>
+                                                {{/each}}
+                                            </ul>
+                                        </div>
+
+                                    </li>
+                                    {{/each}}
+                                </ul>
+                            </div>
                         </div>
-
-                        <br>
-
-                        <ul>
-                            {{#each projects}}
-                            <li>
-                                <div>{{> link text=name href=url blank=true noLine=true}}</div>
-
-                                <br>
-
-                                <div>
-                                    <p>{{about}}</p>
-                                </div>
-
-                                <br>
-
-                                <div><em>Project stacks ({{stackAmount}})</em></div>
-                                <br>
-                                <div>
-                                    <ul>
-                                        {{#each stacks}}
-                                        <li>{{name}}</li>
-                                        {{/each}}
-                                    </ul>
-                                </div>
-
-                                <br>
-
-                                <div><em>Project awards ({{awardsAmount}})</em></div>
-                                <br>
-                                <div>
-                                    <ul>
-                                        {{#each awards}}
-                                        <li>{{name}}</li>
-                                        {{/each}}
-                                    </ul>
-                                </div>
-
-                            </li>
-                            {{/each}}
-                        </ul>
 
                     </li>
                     <br>
