--- a/src/layout/index.hbs
+++ b/src/layout/index.hbs
@@ -7,7 +7,7 @@
 
 <head>
 	<title>
-		{{page.title}}
+		Головна сторінка
 	</title>
 	<meta charset='utf-8' />
 	<link href='css/normalize.css' rel='stylesheet' type="text/css" />
@@ -19,34 +19,10 @@
 	<link href='css/style.css' rel='stylesheet' type="text/css" />
 </head>
 
-<body class="p-5">
-	{{#with header}}
-	<header>
-		<div class="mb-2">
-			<h1>{{name.firstname}} {{name.lastname}}</h1>
-		</div>
-		<div class="mb-2">
-			<b>{{position}}</b>
-		</div>
-		<div class="mb-2">
-			<em>{{salary}}</em>
-		</div>
-		<div class="mb-2">
-			<address>{{address}}</address>
-		</div>
-		<hr class="my-4">
-	</header>
-	{{/with}}
-	<div class="mb-5">
-		{{> nav}}
-	</div>
+<body>
+
 	{{! ↓ ця кострукція показує куди шаблонізатору треба вставляти код з container файлу --}}
 	{{{body}}}
-
-
-	{{#with footer}}
-	{{> footer}}
-	{{/with}}
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
